Fixed the viewport layout on mobile and made the navbar the highest layer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ ul
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 9999;
 }
 
 .navbar .logo
@@ -358,7 +359,7 @@ ul
 /* contact section end */
 
 /* iphone support start*/
-@media screen and (max-width: 575px) 
+@media screen and (max-width: 675px) 
 {
     .navbar
     {
@@ -397,11 +398,15 @@ ul
 
     .work-project
     {
-        padding-top: 20px;
+        padding-top: 110px;
         text-align: center;
-        height: 100px;
+        height: 400px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
-    
+     
     .contact .container 
     {   
         flex-direction: column;
